--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
 			<artifactId>ikonli-bootstrapicons-pack</artifactId>
 			<version>12.3.1</version>
 		</dependency>
+		<!-- backend de productos con hibernate -->
+		<dependency>
+			<groupId>aed.productos</groupId>
+			<artifactId>Hibernate</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 </project>
